--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
 
           <div class="progress">
-            <span class="skill">SQL Databases-SQL Server, MySQL, Postgres, Oracle<i class="val">100%</i></span>
+            <span class="skill">SQL Databases-SQL Server, MySQL, PostgreSQL, Oracle<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -781,7 +781,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>211, 18104, 95th Avenue, Edmonton, T5T 2Z1</p>
+                <p>18104, 95th Avenue, Edmonton, T5T 2Z1</p>
               </div>
 
               <div class="email">
