--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@
               </div>
             </div>
 
+
+            <div class="progress">
+              <span class="skill">Express<i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
             <div class="progress">
               <span class="skill">Firebase<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
@@ -256,26 +264,27 @@
               </div>
             </div>
 
-
-          <div class="progress">
-            <span class="skill">Git VCS/Git Flow<i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-
-
-
             <div class="progress">
-              <span class="skill">HTML5 <i class="val">100%</i></span>
+              <span class="skill">Git VCS/Git Flow<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+          
 
           </div>
           <div class="col-lg-6">
+            
+  
+  
+  
+  
+              <div class="progress">
+                <span class="skill">HTML5 <i class="val">100%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
 
             <div class="progress">
               <span class="skill">Java<i class="val">100%</i></span>
