--- a/index.html
+++ b/index.html
@@ -583,6 +583,35 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-8.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Todo List</h4>
+                <p>Simple Todo List app for android using Java</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="To do List"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/Rcharitra1/simple-todolist" data-glightbox="type: external" title="Portfolio Details"><i class="bx bxl-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-9.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>The Mind Fix</h4>
+                <p>Quiz game using Volley and Java</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Mind Fix"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/Rcharitra1/mind-fix/tree/main" data-glightbox="type: external" title="Portfolio Details"><i class="bx bxl-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           
           
