--- a/index.html
+++ b/index.html
@@ -613,6 +613,38 @@
           </div>
 
 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio_10.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Bill Payment</h4>
+                <p>Maven Project with JFA, JPA, JAX-RS, interceptors and mutli user authentication system</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio_10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bill Payment"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/Rcharitra1/billpayment-mvn/tree/main/dmit2015-1202-oa01-assignment04-Rcharitra1-main" data-glightbox="type: external" title="Portfolio Details"><i class="bx bxl-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio_11.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Alberta Covid Cases By Location</h4>
+                <p>Maven Project with JFA, JPA and EJB Timers </p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio_11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Alberta Covid Cases"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/Rcharitra1/covid-cases-alberta" data-glightbox="type: external" title="Portfolio Details"><i class="bx bxl-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           
           
 
