--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <h4>R Charitra</h4>
               <p><em>2nd year student at DMIT NAIT pursuing Computer Software Development.</em></p>
               <ul>
-                <li>211, 18104 95 Ave, Edmonton</li>
+                <li>18104 95 Ave, Edmonton</li>
                 <li>(587) 284 6928</li>
                 <li>charitra889@gmail.com</li>
               </ul>
